python-algo/errorFile125-01-2020-13-02-06-1579975326429--94000448.txt
  File "/mnt/c/Users/Leon/Desktop/terminal/C1GamesStarterKit/python-algo/algo_strategy.py", line 53
    f = open("C:\Users\Leon\Desktop\terminal\C1GamesStarterKit\python-algo\weights.txt", "r")
            ^
SyntaxError: (unicode error) 'unicodeescape' codec can't decode bytes in position 2-3: truncated \UXXXXXXXX escape
